// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button simple button 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <button
    className="jsx-780996603 button"
    onClick={[Function]}
  >
    Hello!
  </button>
</div>
`;

exports[`Storyshots Card simple card 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-3439448312 card"
    style={
      Object {
        "padding": "50px",
        "width": "200px",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos libero deserunt soluta.
  </div>
</div>
`;

exports[`Storyshots TextInput simple text input 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="jsx-4144538081"
    htmlFor="text-input"
  >
    text input
    <input
      className="jsx-4144538081 text-input"
      id="text-input"
      name="name"
      onChange={[Function]}
      placeholder="text input"
    />
  </label>
</div>
`;

exports[`Storyshots TimePicker not simple button 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <button
    className="jsx-780996603 button"
    onClick={[Function]}
  >
    Hello!
  </button>
</div>
`;
